# elenco_spesa

./: .gitignore  CMakeLists.txt  Categoria.h  ListaSpesa.h  Observer.h  ObserverConcrete.h  OggettoLista.h  README.md  Subject.h  Utente.h  main.cpp
test/: CMakeLists.txt  TestCategoria.cpp  TestListaSpesa.cpp  TestObserverConcrete.cpp  TestOggettoLista.cpp  TestUtente.cpp  runAllTests.cpp
